# GammaTile-EQD2-Converter

./: .gitignore  CLAUDE.md  README.md  exporter.py  io_manager.py  launch.sh  main.py  physics_engine.py  pyproject.toml  requirements.txt  viewer.py
