[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gammatile-eqd2-converter"
version = "1.0.0"
description = "Cs-131 GammaTile physical dose to EQD2 DICOM-RT converter"
requires-python = ">=3.11"
dependencies = [
    "pydicom>=2.4.0",
    "rt-utils>=1.2.7",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "PySide6>=6.7.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
gammatile-eqd2 = "main:main"

[tool.setuptools]
py-modules = ["main", "viewer", "io_manager", "physics_engine", "exporter"]
